# RecruiterAI_Backend

./: LICENSE  README.md
backend/: .dockerignore  Dockerfile.poetry  LINKEDIN_JOB_POSTING.md  LINKEDIN_JOB_POSTING_GUIDE.md  UNIPILE_WEBHOOKS_SETUP.md  docker-compose.simple.yml  env.example  poetry.lock.example  poetry_setup.py  pyproject.toml  requirements.txt  seed_categories_skills.py  setup.py  setup_unipile_webhooks.py  supabase_setup.py  test_auth_curl.sh  test_job_system.py  test_linkedin_job_posting.py  test_linkedin_location.py  test_poetry.py  test_supabase.py  test_unipile_connection.py  test_webhook_endpoint.py  test_webhook_simple.sh
backend/apps/authentication/: models.py  serializers.py  supabase_auth_backend.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py
backend/apps/authentication/supabase/: supabase_auth.py  supabase_serializers.py  supabase_urls.py  supabase_views.py
backend/apps/jobs/: README.md  admin.py  models.py  serializers.py  unipile_service.py  urls.py  views.py
backend/apps/jobs/migrations/: 0001_initial.py
backend/apps/payments/: PRICING_PLANS.md  README.md  admin.py  models.py  serializers.py  stripe_service.py  urls.py  views.py
backend/config/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
